--- a/Projects/ToolsClassier/main.ipynb
+++ b/Projects/ToolsClassier/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,20 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "epochs = 100\n",
     "batch_size = 32\n",
     "patience = 3\n",
-    "learning_rate = 1e-4\n",
+    "learning_rate = 0.01\n",
     "model_path = './model/sigmoid.keras'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,25 +48,25 @@
     "    layers.MaxPooling2D((2,2)),\n",
     "    layers.BatchNormalization(),\n",
     "\n",
-    "\n",
     "    layers.Conv2D(128,(3,3),\n",
     "        activation='relu',\n",
     "        kernel_initializer = initializers.RandomNormal()\n",
     "    ),\n",
     "    layers.MaxPooling2D((2,2)),\n",
+    "    layers.BatchNormalization(),\n",
     "\n",
     "    layers.Flatten(),\n",
     "    layers.Dropout(0.5),\n",
     "    layers.Dense(128,\n",
-    "        activation = 'relu',\n",
+    "        activation = 'tanh',\n",
     "        kernel_initializer = initializers.RandomNormal()\n",
     "    ),\n",
     "    layers.Dense(64,\n",
-    "        activation = 'relu',\n",
+    "        activation = 'tanh',\n",
     "        kernel_initializer = initializers.RandomNormal()\n",
     "    ),\n",
     "    layers.Dense(32,\n",
-    "        activation = 'relu',\n",
+    "        activation = 'tanh',\n",
     "        kernel_initializer = initializers.RandomNormal()\n",
     "    ),\n",
     "    layers.Dense(5,\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
        "['hammer', 'nothing', 'pliers', 'screwdriver', 'wrench']"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -149,35 +149,63 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/100\n",
-      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m40s\u001b[0m 395ms/step - accuracy: 0.3273 - loss: 1.4646 - val_accuracy: 0.3557 - val_loss: 1.4762\n",
+      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m47s\u001b[0m 447ms/step - accuracy: 0.2901 - loss: 1.5649 - val_accuracy: 0.1542 - val_loss: 1.6025\n",
       "Epoch 2/100\n",
-      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 401ms/step - accuracy: 0.4492 - loss: 1.1488 - val_accuracy: 0.3420 - val_loss: 1.3972\n",
+      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m37s\u001b[0m 451ms/step - accuracy: 0.3821 - loss: 1.4517 - val_accuracy: 0.1618 - val_loss: 1.6305\n",
       "Epoch 3/100\n",
-      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 407ms/step - accuracy: 0.4955 - loss: 1.0909 - val_accuracy: 0.3588 - val_loss: 1.3197\n",
+      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m40s\u001b[0m 439ms/step - accuracy: 0.4303 - loss: 1.3516 - val_accuracy: 0.3405 - val_loss: 1.3600\n",
       "Epoch 4/100\n",
-      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m31s\u001b[0m 372ms/step - accuracy: 0.5267 - loss: 1.0413 - val_accuracy: 0.4489 - val_loss: 1.1256\n",
+      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m40s\u001b[0m 423ms/step - accuracy: 0.4949 - loss: 1.2694 - val_accuracy: 0.4214 - val_loss: 1.2575\n",
       "Epoch 5/100\n",
-      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m34s\u001b[0m 411ms/step - accuracy: 0.5645 - loss: 0.9853 - val_accuracy: 0.4779 - val_loss: 1.1175\n",
+      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m36s\u001b[0m 437ms/step - accuracy: 0.5023 - loss: 1.2182 - val_accuracy: 0.4641 - val_loss: 1.2082\n",
       "Epoch 6/100\n",
-      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32s\u001b[0m 384ms/step - accuracy: 0.5934 - loss: 0.9657 - val_accuracy: 0.5420 - val_loss: 1.0360\n",
+      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m40s\u001b[0m 426ms/step - accuracy: 0.5079 - loss: 1.1911 - val_accuracy: 0.4870 - val_loss: 1.1668\n",
       "Epoch 7/100\n",
-      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 407ms/step - accuracy: 0.6155 - loss: 0.9074 - val_accuracy: 0.5710 - val_loss: 0.9884\n",
+      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m36s\u001b[0m 441ms/step - accuracy: 0.5163 - loss: 1.1510 - val_accuracy: 0.5053 - val_loss: 1.1385\n",
       "Epoch 8/100\n",
-      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m38s\u001b[0m 462ms/step - accuracy: 0.6506 - loss: 0.8425 - val_accuracy: 0.5542 - val_loss: 0.9958\n",
+      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m36s\u001b[0m 440ms/step - accuracy: 0.5315 - loss: 1.1248 - val_accuracy: 0.5084 - val_loss: 1.1172\n",
       "Epoch 9/100\n",
-      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m37s\u001b[0m 456ms/step - accuracy: 0.6632 - loss: 0.8116 - val_accuracy: 0.5603 - val_loss: 0.9899\n",
+      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m40s\u001b[0m 490ms/step - accuracy: 0.5593 - loss: 1.0913 - val_accuracy: 0.5130 - val_loss: 1.0942\n",
       "Epoch 10/100\n",
-      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 403ms/step - accuracy: 0.6947 - loss: 0.7526 - val_accuracy: 0.5618 - val_loss: 1.0108\n",
-      "Epoch 10: early stopping\n"
+      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m38s\u001b[0m 463ms/step - accuracy: 0.5558 - loss: 1.0591 - val_accuracy: 0.5374 - val_loss: 1.0793\n",
+      "Epoch 11/100\n",
+      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m39s\u001b[0m 477ms/step - accuracy: 0.5685 - loss: 1.0344 - val_accuracy: 0.5389 - val_loss: 1.0632\n",
+      "Epoch 12/100\n",
+      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m40s\u001b[0m 485ms/step - accuracy: 0.5813 - loss: 1.0130 - val_accuracy: 0.5450 - val_loss: 1.0509\n",
+      "Epoch 13/100\n",
+      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m37s\u001b[0m 445ms/step - accuracy: 0.6007 - loss: 0.9816 - val_accuracy: 0.5450 - val_loss: 1.0298\n",
+      "Epoch 14/100\n",
+      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m36s\u001b[0m 435ms/step - accuracy: 0.6275 - loss: 0.9521 - val_accuracy: 0.5557 - val_loss: 1.0435\n",
+      "Epoch 15/100\n",
+      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m35s\u001b[0m 432ms/step - accuracy: 0.6346 - loss: 0.9312 - val_accuracy: 0.5679 - val_loss: 1.0142\n",
+      "Epoch 16/100\n",
+      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m36s\u001b[0m 436ms/step - accuracy: 0.6662 - loss: 0.8922 - val_accuracy: 0.5847 - val_loss: 1.0176\n",
+      "Epoch 17/100\n",
+      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 431ms/step - accuracy: 0.6704 - loss: 0.8635 - val_accuracy: 0.5832 - val_loss: 0.9981\n",
+      "Epoch 18/100\n",
+      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m40s\u001b[0m 485ms/step - accuracy: 0.6798 - loss: 0.8528 - val_accuracy: 0.5908 - val_loss: 0.9790\n",
+      "Epoch 19/100\n",
+      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m36s\u001b[0m 443ms/step - accuracy: 0.6888 - loss: 0.8307 - val_accuracy: 0.6015 - val_loss: 0.9837\n",
+      "Epoch 20/100\n",
+      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m36s\u001b[0m 434ms/step - accuracy: 0.7071 - loss: 0.7898 - val_accuracy: 0.5710 - val_loss: 1.0011\n",
+      "Epoch 21/100\n",
+      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m36s\u001b[0m 435ms/step - accuracy: 0.7235 - loss: 0.7724 - val_accuracy: 0.5817 - val_loss: 0.9681\n",
+      "Epoch 22/100\n",
+      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m36s\u001b[0m 435ms/step - accuracy: 0.7322 - loss: 0.7523 - val_accuracy: 0.5771 - val_loss: 0.9788\n",
+      "Epoch 23/100\n",
+      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m36s\u001b[0m 433ms/step - accuracy: 0.7401 - loss: 0.7226 - val_accuracy: 0.5832 - val_loss: 0.9909\n",
+      "Epoch 24/100\n",
+      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m36s\u001b[0m 436ms/step - accuracy: 0.7303 - loss: 0.7180 - val_accuracy: 0.5954 - val_loss: 0.9935\n",
+      "Epoch 24: early stopping\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.history.History at 0x2d0b34c3260>"
+       "<keras.src.callbacks.history.History at 0x27f7f0fea20>"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,43 +266,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 38ms/step\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 41ms/step\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 46ms/step\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 65ms/step\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 55ms/step\n",
-      "[np.int64(0), np.int64(1), np.int64(2), np.int64(3), np.int64(4)]\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 47ms/step\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 35ms/step\n",
+      "0\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "np.int64(3)"
+       "'hammer'"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "e = []\n",
-    "e.append(np.argmax(model.predict(load_img(\"data/hammer/000003.jpg\"))))\n",
-    "e.append(np.argmax(model.predict(load_img(\"data/nothing/nothing1.jpg\"))))\n",
-    "e.append(np.argmax(model.predict(load_img(\"data/Pliers/000000.jpg\"))))\n",
-    "e.append(np.argmax(model.predict(load_img(\"data/screwdriver/000000.jpg\"))))\n",
-    "e.append(np.argmax(model.predict(load_img(\"data/wrench/000000.jpg\"))))\n",
+    "# e = []\n",
+    "# e.append(np.argmax(model.predict(load_img(\"data/hammer/000003.jpg\"))))\n",
+    "# e.append(np.argmax(model.predict(load_img(\"data/nothing/nothing1.jpg\"))))\n",
+    "# e.append(np.argmax(model.predict(load_img(\"data/Pliers/000000.jpg\"))))\n",
+    "# e.append(np.argmax(model.predict(load_img(\"data/screwdriver/000000.jpg\"))))\n",
+    "# e.append(np.argmax(model.predict(load_img(\"data/wrench/000000.jpg\"))))\n",
     "\n",
-    "print(e)\n",
-    "np.argmax(model.predict(load_img(\"3.jpeg\")))\n",
+    "# print(e)\n",
+    "response = ['hammer', 'nothing', 'pliers', 'screwdriver', 'wrench']\n",
+    "\n",
+    "res = np.argmax(model.predict(load_img(\"0.jpeg\")))\n",
+    "\n",
+    "print(res)\n",
+    "response[res]\n",
     "\n"
    ]
   }
