--- a/Projects/ASLClassifier/ASLClassifier.ipynb
+++ b/Projects/ASLClassifier/ASLClassifier.ipynb
@@ -53,12 +53,17 @@
     "    \n",
     "    layers.Dropout(0.5),\n",
     "    layers.Dense(128,\n",
-    "        activation = 'tanh',\n",
+    "        activation = 'relu',\n",
+    "        kernel_initializer = initializers.RandomNormal()\n",
+    "    ),\n",
+    "\n",
+    "    layers.Dense(64,\n",
+    "        activation = 'relu',\n",
     "        kernel_initializer = initializers.RandomNormal()\n",
     "    ),\n",
     "\n",
     "    layers.Dense(32,\n",
-    "        activation = 'tanh',\n",
+    "        activation = 'relu',\n",
     "        kernel_initializer = initializers.RandomNormal()\n",
     "    ),\n",
     "    \n",
@@ -148,7 +153,8 @@
     "import numpy as np\n",
     "from PIL import Image\n",
     "from tensorflow.keras.models import load_model\n",
-    "from tensorflow.keras.preprocessing import image"
+    "from tensorflow.keras.preprocessing import image\n",
+    "import joblib\n"
    ]
   },
   {
@@ -163,6 +169,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['model.sab']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(model, 'model.sab')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -170,7 +196,9 @@
     "def load_img(img_path):\n",
     "    img = Image.open(img_path)\n",
     "    img_array = np.asarray(img)\n",
-    "    return np.expand_dims(img_array, axis=0)"
+    "    return np.expand_dims(img_array, axis=0)\n",
+    "\n",
+    "res = ['A','B','C','D','E','F','G','H','I','J','K','L','M','N','O','P','Q','R','S','T','U','V','W','X','Y','Z','del','nothing','space']"
    ]
   },
   {
@@ -179,7 +207,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.argmax(model.predict(load_img(\"asl_alphabet_train\\\\s\\\\0a6fc47a-3260-40c7-b59e-dcef24cb0e91.rgb_0000.png\")))"
+    "res[np.argmax(model.predict(load_img(\"asl_alphabet_train\\\\s\\\\0a6fc47a-3260-40c7-b59e-dcef24cb0e91.rgb_0000.png\")))]"
    ]
   },
   {
@@ -188,7 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.argmax(model.predict(load_img(\"foto1.jpg\")))"
+    "res[np.argmax(model.predict(load_img(\"c.jpeg\")))]"
    ]
   }
  ],
@@ -208,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
